--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -4,7 +4,7 @@
         display: flex
         align-items: center
         justify-content: space-between
-        padding: 0.9rem 0
+        padding: 1.9rem 0
     .logo
         display: flex
         align-items: center
@@ -18,19 +18,20 @@
             font-weight: bold
     .nav
         &__item
+            font-weight: bold
             text-decoration: none
             text-transform: uppercase
             color: $secondary
             padding: 1.428rem 0
             margin-right: 4.4375rem
-            transition: color 0.2s
+            transition: all 0.3s
             &:hover
                color: $primary
-               font-weight: bold
-               border-bottom: 1px solid $blue
+               border-bottom: 2px solid $blue
             &:last-child
                 margin-right: 0
     .phone
         color: $primary
         text-decoration: none
+        font-size: 1.3rem
     
