--- a/css/style.css
+++ b/css/style.css
@@ -362,11 +362,33 @@ template {
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin: 0;
 }
 
 html {
   font-family: 'Roboto', serif;
   font-size: 1rem;
+}
+
+.button {
+  padding: 1.125rem 2.5rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.0625rem;
+  border-radius: 5px;
+}
+
+.button--primary {
+  background-color: #0842b7;
+  color: white;
+}
+
+.button--secondary {
+  padding: 1.0625rem 2.4375rem;
+  background-color: transparent;
+  color: white;
+  border: 1px solid #0842b7;
 }
 
 .header {
@@ -383,7 +405,7 @@ html {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0.9rem 0;
+  padding: 1.9rem 0;
 }
 
 .header .logo {
@@ -408,19 +430,19 @@ html {
 }
 
 .header .nav__item {
+  font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
   color: #777777;
   padding: 1.428rem 0;
   margin-right: 4.4375rem;
-  -webkit-transition: color 0.2s;
-  transition: color 0.2s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .header .nav__item:hover {
   color: #000000;
-  font-weight: bold;
-  border-bottom: 1px solid #0056cf;
+  border-bottom: 2px solid #0056cf;
 }
 
 .header .nav__item:last-child {
@@ -430,5 +452,28 @@ html {
 .header .phone {
   color: #000000;
   text-decoration: none;
+  font-size: 1.3rem;
+}
+
+.hero__title {
+  font-weight: lighter;
+  font-size: 4.375rem;
+  margin: 0;
+  margin-bottom: 0.375rem;
+}
+
+.hero__subtitle {
+  font-weight: normal;
+  font-size: 2.2rem;
+  margin-bottom: 1.8125rem;
+}
+
+.hero__desc {
+  max-width: 21.75rem;
+  margin-bottom: 5.375rem;
+}
+
+.hero .button--secondary {
+  color: #0842b7;
 }
 /*# sourceMappingURL=style.css.map */
