--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,12 +1,3 @@
-.container
-    width: 100%
-    max-width: 1142px
-    margin: auto
-.row
-    display: flex
-    align-items: center
-    justify-content: space-between
-
 *,*:before, *:after
     box-sizing: border-box
     margin: 0
@@ -14,13 +5,47 @@ html
     font-family: 'Roboto', serif
     font-size: 1rem
 
+.container
+    width: 100%
+    max-width: 1142px
+    margin: auto
+
+.row
+    display: flex
+    align-items: center
+    justify-content: space-between
+    width: 100%
+
+.col
+    &-50
+        flex-basis: 50%
+    &-60
+        flex-basis: 60%
+    &-70
+        flex-basis: 70%
+
+.section
+    padding: 120px 0
+    &-title
+        display: flex
+        flex-direction: column
+        align-items: center
+        &__heading
+            font-weight: normal
+            font-size: 2.25rem
+            color: $primary
+            text-align: center
+        &__subtitle
+            text-align: center
 .button
     padding: 1.125rem 2.5rem
     text-decoration: none
     text-transform: uppercase
     font-weight: bold
     font-size: 1.0625rem
+    border: none
     border-radius: 5px
+    cursor: pointer
     &--primary
         background-color: $darkerBlue
         color: $light
@@ -29,5 +54,8 @@ html
         background-color: transparent
         color: $light
         border: 1px solid $darkerBlue
-
-
+    &--white
+        padding: 1.0625rem 2.4375rem
+        background-color: transparent
+        color: $light
+        border: 1px solid $light
