--- a/sass/templates/_creation.sass
+++ b/sass/templates/_creation.sass
@@ -39,23 +39,25 @@
           margin: 0
         /* Firefox */
         input[type=number] 
-          -moz-appearance: textfield;
+          -moz-appearance: textfield
         &__text
             max-width: 12.5rem
     &-button
         display: flex
         justify-content: center
-.creation
-   &-learning
-       display: flex
-       flex-direction: column
-       justify-content: center
-       align-items: center
-       padding: 7.5rem 0 
-       &__heading
-           max-width: 22.4375rem
-           text-align: center
-           margin-bottom: 2.1875rem
-.days
-    &--strong
-        color: #06BEE1
+    &-learning
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        background: url('../img/learning-bg.jpg') no-repeat center /  cover
+        padding: 7.5rem 0 
+        &__heading
+            max-width: 22.4375rem
+            text-align: center
+            color: $light
+            margin-bottom: 2.1875rem
+    .days
+        &--strong
+            color: #06BEE1
+
