--- a/sass/templates/_benefits.sass
+++ b/sass/templates/_benefits.sass
@@ -26,4 +26,23 @@
             &__desc
                 max-width: 10.8125rem
                 text-align: center
-                
+        &-button
+            &__text
+                color: $primary
+                margin-top: 4rem
+            &-prev
+                width: 120px
+                background: url('../img/arrow-left.png') no-repeat center
+                background-size: 52px
+                &__text
+                    margin-left: 1rem
+                &::after
+                    display: none
+            &-next
+                width: 120px
+                background: url('../img/arrow-right.png') no-repeat center
+                background-size: 52px
+                &__text
+                    margin-right: 4rem
+                &::after
+                    display: none
