--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,5 +7,6 @@
 @import 'templates/creation'
 @import 'templates/benefits'
 @import 'templates/steps'
+@import 'templates/format'
 
 @import 'media'
