--- a/css/style.css
+++ b/css/style.css
@@ -947,4 +947,49 @@ html {
   max-width: 35.1875rem;
   margin-bottom: 2.8125rem;
 }
+
+.format .section-title {
+  margin-bottom: 4rem;
+}
+
+.format-card {
+  color: white;
+  max-width: 33.75rem;
+  height: 23.1875rem;
+  padding: 11.375rem 14.375rem 2.75rem 2.75rem;
+}
+
+.format-card__title {
+  font-size: 1.5rem;
+  max-width: 9.9375rem;
+  margin-bottom: 1.9375rem;
+}
+
+.format-card__text {
+  max-width: 12.0625rem;
+}
+
+.format-card__test {
+  background: url("../img/format1-bg.jpg");
+}
+
+.format-card__help {
+  background: url("../img/format2-bg.jpg");
+}
+
+.format-card__help .format-card__text {
+  max-width: 17.0625rem;
+}
+
+.format .card__img {
+  margin-bottom: 2.0625rem;
+}
+
+.format .card__title {
+  margin-bottom: 1.375rem;
+}
+
+.format .card__text {
+  max-width: 12.4375rem;
+}
 /*# sourceMappingURL=style.css.map */
