--- a/sass/templates/_format.sass
+++ b/sass/templates/_format.sass
@@ -1,11 +1,10 @@
 .format
+    border-bottom: 1px solid $darkenGray
     .section
         &-title
             margin-bottom: 4rem
     &-card
         color: $light
-        max-width: 33.75rem
-        height: 23.1875rem
         padding: 11.375rem 14.375rem 2.75rem 2.75rem
         &__title
             font-size: 1.5rem
@@ -14,17 +13,19 @@
         &__text
             max-width: 12.0625rem
         &__test
-            background: url('../img/format1-bg.jpg')
+            background: url('../img/format1-bg.jpg') no-repeat center
         &__help
-            background: url('../img/format2-bg.jpg')
+            background: url('../img/format2-bg.jpg') no-repeat center
             .format
                 &-card
                     &__text
                         max-width: 17.0625rem
+    .cards
+        margin-bottom: 4.8125rem
     .card
         &__img
             margin-bottom: 2.0625rem
         &__title
             margin-bottom: 1.375rem
         &__text
-            max-width: 12.4375rem
+            max-width: 16.4375rem
