--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -7,7 +7,7 @@
     padding-top: 276px
     padding-bottom: 0
     .container
-        border-bottom: 1px solid rgba(234, 241, 247, 1)
+        border-bottom: 1px solid $darkenGray
         padding-bottom: 7.25rem
     &__title
         font-weight: lighter
