--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -30,6 +30,10 @@ html
         display: flex
         flex-direction: column
         align-items: center
+        &--left
+            display: flex
+            flex-direction: column
+            align-items: start
         &__heading
             font-weight: normal
             font-size: 2.25rem
