--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,11 +2,13 @@
 @import 'normalize'
 @import 'variables'
 @import 'settings'
+
 @import 'templates/header'
 @import 'templates/hero'
 @import 'templates/creation'
 @import 'templates/benefits'
 @import 'templates/steps'
 @import 'templates/format'
+@import 'templates/progress'
 
 @import 'media'
