feat: add section lessons(add)

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import 'templates/benefits'
 @import 'templates/steps'
 @import 'templates/format'
-@import 'templates/progress'
+@import 'templates/view'
+@import 'templates/lessons'
 
 @import 'media'
