--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -19,6 +19,8 @@ html
 .col
     &-50
         flex-basis: 50%
+        &--width
+            width: 48%
     &-60
         flex-basis: 60%
     &-70
@@ -50,6 +52,7 @@ html
     border: none
     border-radius: 5px
     cursor: pointer
+    transition: all .3s
     &--primary
         background-color: $darkerBlue
         color: $light
@@ -63,3 +66,5 @@ html
         background-color: transparent
         color: $light
         border: 1px solid $light
+    &:hover
+        filter: drop-shadow(0px 5px 6px $darkerBlue)
