--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,5 +11,6 @@
 @import 'templates/format'
 @import 'templates/view'
 @import 'templates/lessons'
+@import 'templates/advantage'
 
 @import 'media'
