--- a/sass/templates/_benefits.sass
+++ b/sass/templates/_benefits.sass
@@ -1,6 +1,6 @@
 .benefits
     padding-bottom: 24.25rem
-    background: url('../img/creation_swiper-bg.jpg') no-repeat center
+    background: $darkenGray url('../img/creation_swiper-bg.jpg') no-repeat center
     .section
         &-title
             &__heading
