--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,6 @@
 @import 'templates/view'
 @import 'templates/lessons'
 @import 'templates/advantage'
+@import 'templates/prices'
 
 @import 'media'
