--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,5 +13,6 @@
 @import 'templates/lessons'
 @import 'templates/advantage'
 @import 'templates/prices'
+@import 'templates/learning-form'
 
 @import 'media'
