--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,10 @@
 @import 'templates/advantage'
 @import 'templates/prices'
 @import 'templates/learning-form'
+@import 'templates/feedback'
+@import 'templates/results'
+@import 'templates/cashback'
+@import 'templates/questions'
+@import 'templates/footer'
 
 @import 'media'
