--- a/sass/templates/_learning-form.sass
+++ b/sass/templates/_learning-form.sass
@@ -3,6 +3,7 @@
     .section
         &-title
             color: $light
+            margin-bottom: 2.75rem
             &__heading
                 font-size: 1.5rem
                 font-weight: bold
@@ -16,5 +17,16 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        max-width: 22.375rem
+        width: 100%
+        margin: auto
     &__input
-        
+        width: 100%
+        text-indent: 1.125rem
+        padding-top: 1.125rem
+        padding-bottom: 1rem
+        border-radius: 5px
+        border: none
+        margin-bottom: 1.5rem
+    &__button
+        width: 100%
